--- a/static/stylesheets/dashboard.css
+++ b/static/stylesheets/dashboard.css
@@ -25,7 +25,7 @@
     max-width: 90%;
     width: 525px;
     margin: 20px auto;
-    text-align: left;
+    text-align: justify;
 }
 
 .rounded-box {
