--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -48,11 +48,9 @@
                     <h2>Application Status: <span class="rounded-box accept">ACCEPTED</span></h2>
                     <p>You’re awesome. We’re awesome. Head over to our <a href="https://www.facebook.com/events/257902701319629/">Facebook event page</a> and join the community!</p>
                     <p>
-                        There will be two MHacks buses:
-                        <ul>
-                            <li>University of Toronto -> University of Waterloo -> University of Michigan</li>
-                            <li>University of Illinois at Urbana-Champaign -> Purdue University -> University of Michigan</li>
-                        </ul>
+                        There will be two MHacks buses: <br>
+                        • University of Toronto -> University of Waterloo -> University of Michigan <br>
+                        • University of Illinois at Urbana-Champaign -> Purdue University -> University of Michigan <br>
                         Space is limited, so sign up ASAP to guarantee a spot on the bus. Check back soon for bus itineraries and a bus registration link.
                     </p>
 
