--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -47,7 +47,7 @@
                 {% if application.decision == 'Accept' %}
                     <h2>Application Status: <span class="rounded-box accept">ACCEPTED</span></h2>
                     <p>You’re awesome. We’re awesome. Head over to our <a href="https://www.facebook.com/events/257902701319629/">Facebook event page</a> and join the community!</p>
-                    <p style="margin: 20px auto 0;">There will be two MHacks buses: </p>
+                    <p style="margin: 20px auto 0;">There will be two MHacks buses 🚌: </p>
                     <p style="margin: 0 auto; padding-left: 25px">• University of Toronto -> University of Waterloo -> University of Michigan </p>
                     <p style="margin: 0 auto; padding-left: 25px">• University of Illinois at Urbana-Champaign -> Purdue University -> University of Michigan </p>
                     <p style="margin: 0 auto 20px;">Space is limited, so sign up ASAP to guarantee a spot on the bus. Check back soon for bus itineraries and a bus registration link. </p>
