--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -47,6 +47,7 @@
                 {% if application.decision == 'Accept' %}
                     <h2>Application Status: <span class="rounded-box accept">ACCEPTED</span></h2>
                     <p>You’re awesome. We’re awesome. Head over to our <a href="https://www.facebook.com/events/257902701319629/">Facebook event page</a> and join the community!</p>
+                    <p>For those of you driving to MHacks 9, head to our sign-up sheet <a href="http://www.groupcarpool.com/t/q8kbid">here</a> if you would like to set up a carpool.</p>
                     <p style="margin: 20px auto 0;">There will be two MHacks buses 🚌: </p>
                     <p style="margin: 0 auto; padding-left: 25px">• University of Toronto -> University of Waterloo -> University of Michigan </p>
                     <p style="margin: 0 auto; padding-left: 25px">• University of Illinois at Urbana-Champaign -> Purdue University -> University of Michigan </p>
@@ -61,7 +62,7 @@
                         <br />
                         <h2>Reimbursement amount: <span class="rounded-box accept">${{ '{:.2f}'.format(application.reimbursement) }}</span> </h2>
                         <p>If you are flying ✈️️ to MHacks, you currently have 5 days to send your flight receipt to <a href="mailto:flymhacks@umich.edu">flymhacks@umich.edu</a>! A bus will arrive at Detroit Metro Airport to shuttle hackers to Ann Arbor at 5:00pm ET. Please ensure that you will land in time to catch this bus.</p>
-                        <p>If you are driving 🚗 to MHacks, please save all gas/parking receipts; you will have until 11:59pm ET on Friday, March 31st to email all receipts you would like to be reimbursed for in a single email to <a href="mailto:flymhacks@umich.edu">flymhacks@umich.edu</a>. To set up a carpool, head to our sign-up sheet <a href="http://www.groupcarpool.com/t/q8kbid">here</a>.</p>
+                        <p>If you are driving 🚗 to MHacks, please save all gas/parking receipts; you will have until 11:59pm ET on Friday, March 31st to email all receipts you would like to be reimbursed for in a single email to <a href="mailto:flymhacks@umich.edu">flymhacks@umich.edu</a>.</p>
                         <p></p>
                         <p>Please note you must submit a hack at MHacks 9 to receive a travel reimbursement</p>
                         <p>We’ll see you there!</p>
