Added travel logistics information doc

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -63,8 +63,8 @@
                         <h2>Reimbursement amount: <span class="rounded-box accept">${{ '{:.2f}'.format(application.reimbursement) }}</span> </h2>
                         <p>If you are flying ✈️️ to MHacks, you currently have 5 days to send your flight receipt to <a href="mailto:flymhacks@umich.edu">flymhacks@umich.edu</a>! A bus will arrive at Detroit Metro Airport to shuttle hackers to Ann Arbor at 5:00pm ET. Please ensure that you will land in time to catch this bus.</p>
                         <p>If you are driving 🚗 to MHacks, please save all gas/parking receipts; you will have until 11:59pm ET on Friday, March 31st to email all receipts you would like to be reimbursed for in a single email to <a href="mailto:flymhacks@umich.edu">flymhacks@umich.edu</a>.</p>
-                        <p></p>
-                        <p>Please note you must submit a hack at MHacks 9 to receive a travel reimbursement</p>
+                        <p>For more information check <a href="https://drive.google.com/file/d/0B4fSxuPetYFGTEFLTTJWbUd4cU0/view?usp=sharing">this document</a></p>
+                        <p>Please note you must submit a hack at MHacks 9 to receive your travel reimbursement</p>
                         <p>We’ll see you there!</p>
                     {% endif %}
                 {% elif application.decision == 'Waitlist' %}
