Added sponsor logos

--- a/templates/index.html
+++ b/templates/index.html
@@ -408,9 +408,32 @@
                 </div>
             </div>
 
-
-            <div class="flex-row">
-
+            <div class="col-1 center-col" style="margin-top: 25px;">
+              <h2 class="section-header">Sponsors</h2>
+              <div class="logo-container big-tile">
+                  <div class="logo-row medium">
+                      <div><a target="_blank" href="https://linode.com"><img
+                              src="{{ static('assets/Linode_logo.png') }}" alt="Sponsor Logo - Linode"></a></div>
+                      <div><a target="_blank" href="https://www.capitalone.io/"><img
+                              src="{{ static('assets/capitalone_logo.png') }}" alt="Sponsor Logo - Capital One"></a></div>
+                      <div><a target="_blank" href="https://www.ltsnet.net/"><img
+                              src="{{ static('assets/lts_logo.png') }}" alt="Sponsor Logo - LTS"></a></div>
+                  </div>
+                  <div class="logo-row small">
+                      <div><a target="_blank" href="https://twilio.com/"><img
+                              src="{{ static('assets/twilio_logo.png') }}" alt="Sponsor Logo - Twilio"></a></div>
+                      <div><a target="_blank" href="https://mixmax.com/"><img
+                              src="{{ static('assets/mixmax_logo.png') }}" alt="Sponsor Logo - Mixmax"></a></div>
+                      <div><a target="_blank" href="https://wolframalpha.com/"><img
+                              src="{{ static('assets/wolfram-corporate-logo.png') }}" alt="Sponsor Logo - Wolfram Alpha"></a></div>
+                  </div>
+                  <div class="logo-row small">
+                      <div><a target="_blank" href="https://get.tech/"><img
+                              src="{{ static('assets/dot_tech_logo.png') }}" alt="Sponsor Logo - .tech"></a></div>
+                      <div><a target="_blank" href="https://bloomberg.com/"><img
+                              src="{{ static('assets/Bloomberg_logo.png') }}" alt="Sponsor Logo - Bloomberg"></a></div>
+                  </div>
+              </div>
             </div>
         </div>
 
