school breakdown in stats page

--- a/templates/stats.html
+++ b/templates/stats.html
@@ -28,6 +28,12 @@
         <div class="stats-content" id="gender-breakdown">
             <canvas id="gender-pie" width="400" height="400"></canvas>
         </div>
+
+        <h1>School Breakdown</h1>
+        <br>
+        <div class="stats-content" id="school-breakdown">
+            <canvas id="school-pie" width="400" height="400"></canvas>
+        </div>
     </div>
 {% endblock %}
 
