Added more sponsor logos

--- a/templates/index.html
+++ b/templates/index.html
@@ -411,20 +411,32 @@
             <div class="col-1 center-col" style="margin-top: 25px;">
               <h2 class="section-header">Sponsors</h2>
               <div class="logo-container big-tile">
+                  <div class="logo-row large">
+                      <div><a target="_blank" href="https://atomicobject.com"><img
+                              src="{{ static('assets/atomicobject_logo.png') }}" alt="Sponsor Logo - Atomic Object"></a></div>
+                      <div><a target="_blank" href="http://www.delphi.com/"><img
+                              src="{{ static('assets/delphi_logo.png') }}" alt="Sponsor Logo - Delphi"></a></div>
+                  </div>
                   <div class="logo-row medium">
                       <div><a target="_blank" href="https://linode.com"><img
                               src="{{ static('assets/Linode_logo.png') }}" alt="Sponsor Logo - Linode"></a></div>
-                      <div><a target="_blank" href="https://www.capitalone.io/"><img
+                      <div><a target="_blank" href="https://developer.capitalone.com/community/"><img
                               src="{{ static('assets/capitalone_logo.png') }}" alt="Sponsor Logo - Capital One"></a></div>
                       <div><a target="_blank" href="https://www.ltsnet.net/"><img
                               src="{{ static('assets/lts_logo.png') }}" alt="Sponsor Logo - LTS"></a></div>
+                  </div>
+                  <div class="logo-row medium">
+                      <div><a target="_blank" href="https://www.intelligencecareers.gov/nsa/"><img
+                              src="{{ static('assets/nsa_logo.png') }}" alt="Sponsor Logo - NSA"></a></div>
+                      <div><a target="_blank" href="https://www.drw.com"><img
+                              src="{{ static('assets/drw_logo.png') }}" alt="Sponsor Logo - DRW"></a></div>
                   </div>
                   <div class="logo-row small">
                       <div><a target="_blank" href="https://twilio.com/"><img
                               src="{{ static('assets/twilio_logo.png') }}" alt="Sponsor Logo - Twilio"></a></div>
                       <div><a target="_blank" href="https://mixmax.com/"><img
                               src="{{ static('assets/mixmax_logo.png') }}" alt="Sponsor Logo - Mixmax"></a></div>
-                      <div><a target="_blank" href="https://wolframalpha.com/"><img
+                      <div><a target="_blank" href="http://wolframalpha.com/"><img
                               src="{{ static('assets/wolfram-corporate-logo.png') }}" alt="Sponsor Logo - Wolfram Alpha"></a></div>
                   </div>
                   <div class="logo-row small">
@@ -432,6 +444,16 @@
                               src="{{ static('assets/dot_tech_logo.png') }}" alt="Sponsor Logo - .tech"></a></div>
                       <div><a target="_blank" href="https://bloomberg.com/"><img
                               src="{{ static('assets/Bloomberg_logo.png') }}" alt="Sponsor Logo - Bloomberg"></a></div>
+                      <div><a target="_blank" href="https://auto-owners.com/"><img
+                              src="{{ static('assets/aoins_logo.jpg') }}" alt="Sponsor Logo - Auto Owners Insurance"></a></div>
+                  </div>
+                  <div class="logo-row small">
+                      <div><a target="_blank" href="http://www.1517fund.com/"><img
+                              src="{{ static('assets/1517_logo.png') }}" alt="Sponsor Logo - 1517"></a></div>
+                      <div><a target="_blank" href="http://branchapp.com/dl"><img
+                              src="{{ static('assets/branch_logo.png') }}" alt="Sponsor Logo - Branch"></a></div>
+                      <div><a target="_blank" href="http://www.3redgroup.com"><img
+                              src="{{ static('assets/3red_logo.jpg') }}" alt="Sponsor Logo - 3Red"></a></div>
                   </div>
               </div>
             </div>
