Updated Capital One link

--- a/templates/index.html
+++ b/templates/index.html
@@ -420,7 +420,7 @@
                   <div class="logo-row medium">
                       <div><a target="_blank" href="https://linode.com"><img
                               src="{{ static('assets/Linode_logo.png') }}" alt="Sponsor Logo - Linode"></a></div>
-                      <div><a target="_blank" href="https://developer.capitalone.com/community/"><img
+                      <div><a target="_blank" href="https://campus.capitalone.com/"><img
                               src="{{ static('assets/capitalone_logo.png') }}" alt="Sponsor Logo - Capital One"></a></div>
                       <div><a target="_blank" href="https://www.ltsnet.net/"><img
                               src="{{ static('assets/lts_logo.png') }}" alt="Sponsor Logo - LTS"></a></div>
