Fix mentor link for undecided applications

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -84,9 +84,7 @@
                         <form method="GET" action="{{ url_for('mhacks-apply') }}">
                             <button type="submit">Hacker</button>
                         </form>
-                        <form method="GET" action="{{ url_for('mhacks-applyMentor') }}">
-                            <button type="submit">Mentor</button>
-                        </form>
+                        <a class="button-link" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfe58RgYR8zSb_NxMfDNDC5x5Wi3H2MQwGrzAPZW4B-alaMnQ/viewform?usp=sf_link">Mentor</a>
                     </div>
                 {% endif %}
 {#            {% else %}#}
