Fix css for undecided application edit links

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -80,7 +80,7 @@
                     <div>
                         <p>If you need to edit your application, use the buttons below.</p>
                     </div>
-                    <div class="row-container">
+                    <div class="dashboard-registration row-container">
                         <form method="GET" action="{{ url_for('mhacks-apply') }}">
                             <button type="submit">Hacker</button>
                         </form>
