--- a/static/stylesheets/base.css
+++ b/static/stylesheets/base.css
@@ -1127,6 +1127,11 @@ html fieldset {
   transition: all 0.2s;
 }
 
+.button-link:focus {
+  text-decoration: none;
+  color: white;
+}
+
 .row-container {
     text-align: center;
     display: flex;
