--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
 
     <link rel="shortcut icon" type="image/png" href={{ static("assets/favicon.png") }} />
     <link rel="apple-touch-icon" type="image/png" href={{ static("assets/favicon.png") }} />
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.10/font-awesome-animation.min.css" rel="stylesheet" type="text/css">
-	<link href="//fonts.googleapis.com/css?family=Ubuntu:300,400,700" rel="stylesheet" type="text/css">
-	<link href="//fonts.googleapis.com/css?family=Lora:400,400italic|Open+Sans|Roboto|Source+Sans+Pro" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" media="all" href="{{ static('stylesheets/base.css') }}">
+    <link href="//fonts.googleapis.com/css?family=Ubuntu:300,400,700" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Lora:400,400italic|Open+Sans|Roboto|Source+Sans+Pro" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" media="all" href="{{ static('stylesheets/base.css') }}?v=1">
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="application/javascript"></script>
 
@@ -30,11 +30,11 @@
     {% endblock %}
 
     <title>{% block pagetitle %}MHacks 9{% endblock %}</title>
-</head>
-<body>
+  </head>
+  <body>
     {% block content %}
     {% endblock %}
-</body>
-	{% block scripts %}
-	{% endblock %}
+  </body>
+  {% block scripts %}
+  {% endblock %}
 </html>
