Fixed announcements and schedule on live

--- a/templates/announcements.html
+++ b/templates/announcements.html
@@ -5,7 +5,7 @@
             <i id="refreshAnnouncements" class="fa fa-refresh fa-2x fa-fw" aria-hidden="true"></i>
         </div>
     </div>
-    <div class="announcements-legend">
+    <div class="announcements-legend" style="display: none">
         <h2>Categories:</h2>
         <div class="announcements-categories">
             <h2 class="category-0">Emergency</h2>
