--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -2,7 +2,7 @@
     <div class="content-header">
         <h1>Schedule</h1>
     </div>
-    <div class="schedule-legend">
+    <div class="schedule-legend" style="display: none">
         <h2>Categories:</h2>
         <div class="schedule-categories">
             <h2 class="category-0">General</h2>
