--- a/static/stylesheets/live.css
+++ b/static/stylesheets/live.css
@@ -76,16 +76,12 @@ body{
   width: 100%;
   height: 60px;
 
-  background-color: white;
-  box-shadow: 0 3px 5px 1px rgba(192,192,192,1);
-
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: flex-start;
   align-items: center;
 
-  border: 1px solid rgba(204,204,204,0.5);
   z-index: 20;
 }
 
@@ -95,6 +91,13 @@ body{
 
 .content-header h1 {
   margin-left: 20px;
+  text-transform: uppercase;
+  color: #fece2f;
+}
+
+.schedule .content-header h1 {
+  text-align: center;
+  margin: 0 auto;
 }
 
 .right-header-group {
@@ -109,8 +112,7 @@ body{
 }
 
 .content-box {
-  background-color: white;
-  box-shadow: 0 2px 10px 1px rgba(160,160,160,1);
+  background-color: rgba(0,0,0,0.4);
 }
 
 @media only screen and (max-width: 850px){
@@ -202,7 +204,7 @@ body{
 }
 
 .schedule-container {
-  max-height: calc(100% - 140px);
+  max-height: calc(100% - 80px);
   width: 100%;
 
   padding: 5px 35px 5px 25px;
@@ -232,7 +234,7 @@ body{
   padding: 0;
   height: 40px;
   font-variant: small-caps;
-  color: black;
+  color: white;
 }
 
 .time-stamps p:nth-child(odd){
@@ -255,11 +257,11 @@ body{
 }
 
 .time-lines div:nth-child(odd){
-  border-top: 4px solid black;
+  border-top: 2px solid whitesmoke;
 }
 
 .time-lines div:nth-child(even){
-  border-top: 2px solid black;
+  border-top: 1px solid whitesmoke;
 }
 
 .events {
@@ -269,10 +271,10 @@ body{
 .event {
   position: absolute;
   float: left;
-  border: 5px solid black;
+  border: 3px solid black;
   border-radius: 5px;
-  padding: 10px;
-  background-color: white;
+  padding: 6px;
+  background-color: rgba(0, 0, 0, 0.3);
   opacity: 0.95;
   overflow: hidden;
   height: 0;
@@ -283,8 +285,8 @@ body{
 .event:hover {
   height: auto;
   opacity: 1;
-  box-shadow: 0 4px 5px 1px rgba(200, 200, 200, 0.80);
-  transition: all 0.2s linear; /*height 0.3s linear, width 0.3s linear, min-width 0.3s linear, left 0.2s linear 0.1s, opacity 0.2s;*/
+  box-shadow: 0 2px 2px 1px rgba(200, 200, 200, 0.40);
+  transition: all 0.2s linear;
   z-index: 10;
 }
 
@@ -298,18 +300,20 @@ body{
 }
 
 .event h2 {
-  margin: 0 0 5px 0;
+  margin: 0;
   font-size: 12pt;
 }
 
 .event h3 {
-  margin: 0 0 4px 0;
+  margin: 0;
   padding-bottom: 4px;
   border-bottom: 2px solid rgba(204, 204, 204, 0.8);
+  font-size: 16px;
+  font-weight: bolder
 }
 
 .event p {
-  color: black !important;
+  color: white !important;
 }
 
 .event.category-0 {
@@ -319,7 +323,7 @@ body{
   border-color: rgb(247, 139, 49);
 }
 .event.category-2 {
-  border-color: rgb(255, 202, 11);
+  border-color: #ff357d;
 }
 .event.category-3 {
   border-color: rgb(168, 110, 219);
@@ -388,12 +392,12 @@ body{
 }
 
 #refreshAnnouncements {
-  color: #0093B1;
+  color: #fecd2f;
   cursor: pointer;
 }
 
 .announcements-container {
-  max-height: calc(100% - 160px);
+  max-height: calc(100% - 80px);
   overflow-y: auto;
 }
 
@@ -494,18 +498,18 @@ body{
 }
 
 .announcement h2 {
-  color: #0093B1;
+  color: white;
   margin: 0 0 5px 0;
   font-size: 12pt;
 }
 
 .announcement h3 {
-  color: #0093B1;
+  color: white;
   margin: 0 0 8px 0;
 }
 
 .announcement p {
-  color: black;
+  color: white;
 }
 
 @media only screen and (max-width: 850px){
