--- a/templates/live.html
+++ b/templates/live.html
@@ -43,10 +43,10 @@
         <div class="live-section" data-section="Announcements">{% include 'announcements.html' %}</div>
         <div class="live-section" data-section="Schedule">{% include 'schedule.html' %}</div>
     </div>
-    <div class="live-container" style="display:none">
+    <div class="live-container">
         <div class="live-section" data-section="Maps">{% include 'maps.html' %}</div>
     </div>
-    <div class="live-container col-2-flex" style="display: none">
+    <div class="live-container col-2-flex">
         <div class="live-section" data-section="Mentorship">{% include 'mentorship.html' %}</div>
         <div class="live-section" data-section="Hardware">{% include 'hardware.html' %}</div>
     </div>
