--- a/templates/live.html
+++ b/templates/live.html
@@ -39,7 +39,7 @@
       </div>
     </div>
 
-    <div class="live-container col-2-flex" style="background-image:url({{ static('assets/live_bg_1.png') }}); background-size:cover">
+    <div class="live-container col-2-flex">
         <div class="live-section" data-section="Announcements">{% include 'announcements.html' %}</div>
         <div class="live-section" data-section="Schedule">{% include 'schedule.html' %}</div>
     </div>
