--- a/templates/live.html
+++ b/templates/live.html
@@ -32,7 +32,7 @@
 
 {% block basic_page_content %}
     </div>
-    <div style="background-image:url({{ static('assets/live_bg_1.png') }}); background-size:cover">
+    <div style="background-image:url({{ static('assets/live_bg_1.png') }}); background-size:cover; background-attachment:fixed;">
     <div class="live-header">
       <div id="countdown-container">
           {% include 'countdown.html' %}
