--- a/static/stylesheets/base.css
+++ b/static/stylesheets/base.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
   overflow-x: hidden;
   overflow-y: auto;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   font-size: 12pt;
   color: #4a4948;
   background-color: white;
